# analyzefrc

./: .gitignore  CITATION.cff  README.md  example_lif.py  example_tiff_concurrency.py  examples.py  pyproject.toml  test.py  test2.py  two_test.py  twotest.py
.github/workflows/: ci.yml
src/analyzefrc/: __init__.py  datatest.py  deps_types.py  file_read.py  fit_res.py  frc_util.py  helper.py  lif_util.py  plot.py  process.py  read.py
tests/: siemens.tiff  test_measure_curve.py
