[tool.poetry]
name = "analyzefrc"
version = "0.1.2"
description = "Plots, analysis and resolution measurement of microscopy images using Fourier Ring Correlation (FRC)."
authors = ["Tip ten Brink <T.M.tenBrink@student.tudelft.nl>"]
readme = "README.md"

[tool.poetry.urls]
"Source Code" = "https://github.com/tmtenbrink/analyzefrc"

[tool.poetry.dependencies]
python = "~3.9"
frc = "^0.1.0"
matplotlib = "^3.4"
Pillow = "^8.3.2"
loess = "^2.1.1"
deco = "^0.6.3"
readlif = "^0.6.5"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
